--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.0",
     "react-router-dom": "^6.21.1",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.10.4"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-icons": "^3.0.0",
+    "@types/react-toastify": "^4.1.0",
     "@types/recharts": "^1.8.29",
     "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
